syntax = "proto3";

package pb;

import "user.proto"; 

option go_package = "github.com/ShadrackAdwera/go-gRPC/pb";

message SignUpRequest {
    string username = 2;
    string email = 3;
    string password = 4; 
}

message SignUpResponse {
    User user = 1;
}



