syntax = "proto3";

package pb;

import "rpc_sign_up.proto"; 

option go_package = "github.com/ShadrackAdwera/go-gRPC/pb";

service Auth {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}