syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ShadrackAdwera/go-gRPC/pb";

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp created_at = 5; 
}



